Add main function

--- a/twitter_functions.ipynb
+++ b/twitter_functions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd3311a",
+   "id": "6d2be353",
    "metadata": {},
    "source": [
     "### Libraries to import"
@@ -38,12 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7446f13f",
    "metadata": {},
    "outputs": [],
    "source": [
     "DEFAULT_DATA_DIR = os.path.join(\"data\", \"farmers-protest-tweets-2021-03-5.json\")\n",
+    "\n",
+    "def validate_input(input_str):\n",
+    "    if input_str not in [\"1\", \"2\", \"3\", \"4\"]:\n",
+    "        input_str = input(\"Please enter a valid option.\\n> \")\n",
+    "        return validate_input(input_str)\n",
+    "    return input_str\n",
     "\n",
     "def top_retweeted(input_path):\n",
     "    return \"top_retweeted\"\n",
@@ -58,7 +64,27 @@
     "    return \"top_hashtags\"\n",
     "\n",
     "def main():\n",
-    "    return \"main\""
+    "    input_path = input(\"Enter dataset path (leave empty to use default value): \")\n",
+    "    if not os.path.exists(input_path):\n",
+    "        input_path = DEFAULT_DATA_DIR\n",
+    "        print(f\"Default value will be used ({input_path})\")\n",
+    "\n",
+    "    options_str = \"\"\"Available functions:\n",
+    "        [1] Top 10 most retweeted tweets\n",
+    "        [2] Top 10 users that tweeted the most\n",
+    "        [3] Top 10 days where people tweeted the most\n",
+    "        [4] Top 10 most used hashtags\"\"\"\n",
+    "    \n",
+    "    functions_dict = {\n",
+    "        \"1\": top_retweeted,\n",
+    "        \"2\": top_users,\n",
+    "        \"3\": top_days,\n",
+    "        \"4\": top_hashtags\n",
+    "    }\n",
+    "    \n",
+    "    selected_function = validate_input(input(f\"{options_str}\\n> \"))\n",
+    "    result = functions_dict[selected_function](input_path)\n",
+    "    print(f\"Execution result:\\n {result}\")\n"
    ]
   },
   {
@@ -71,19 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2c41796c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'main'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter dataset path (leave empty to use default value): \n",
+      "Default value will be used (data/farmers-protest-tweets-2021-03-5.json)\n",
+      "Available functions:\n",
+      "        [1] Top 10 most retweeted tweets\n",
+      "        [2] Top 10 users that tweeted the most\n",
+      "        [3] Top 10 days where people tweeted the most\n",
+      "        [4] Top 10 most used hashtags\n",
+      "> 1\n",
+      "Execution result:\n",
+      " top_retweeted\n"
+     ]
     }
    ],
    "source": [
