Add top days function

--- a/twitter_functions.ipynb
+++ b/twitter_functions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9d8763f8",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7446f13f",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,18 @@
     "    return list(map(lambda x: x[0], top_users[:10]))\n",
     "\n",
     "def top_days(input_path):\n",
-    "    return \"top_days\"\n",
+    "    \"\"\"Reads the dataset at input_path and returns the top 10 days that have the most tweets.\n",
+    "    \"\"\"\n",
+    "    days_dict = defaultdict(lambda: 0)\n",
+    "    with open(input_path) as input_file:\n",
+    "        for line in input_file:\n",
+    "            tweet = json.loads(line.strip())\n",
+    "            date = tweet[\"date\"]\n",
+    "            day = date[:date.index(\"T\")]\n",
+    "            days_dict[day] += 1\n",
+    "    top_days = sorted([(day, tweets) for day, tweets in days_dict.items()], key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    return list(map(lambda x: x[0], top_days[:10]))\n",
     "\n",
     "def top_hashtags(input_path):    \n",
     "    return \"top_hashtags\"\n",
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2c41796c",
    "metadata": {},
    "outputs": [
@@ -140,9 +151,9 @@
       "        [2] Top 10 users that tweeted the most\n",
       "        [3] Top 10 days where people tweeted the most\n",
       "        [4] Top 10 most used hashtags\n",
-      "> 2\n",
+      "> 3\n",
       "Execution result:\n",
-      " ['harjot_tweeting', 'tasveersandhu', 'shells_n_petals', 'jot__b', 'rebelpacifist', 'rumsomal', 'Iamjazzie96', 'Jass_k_G', 'DigitalKisanBot', 'z_khalique007']\n"
+      " ['2021-02-03', '2021-02-04', '2021-02-05', '2021-02-02', '2021-02-06', '2021-02-07', '2021-02-09', '2021-02-08', '2021-02-10', '2021-02-11']\n"
      ]
     }
    ],
