Add top hashtags function

--- a/twitter_functions.ipynb
+++ b/twitter_functions.ipynb
@@ -27,6 +27,7 @@
    "source": [
     "import os\n",
     "import json\n",
+    "import re\n",
     "from collections import defaultdict"
    ]
   },
@@ -99,8 +100,19 @@
     "    \n",
     "    return list(map(lambda x: x[0], top_days[:10]))\n",
     "\n",
-    "def top_hashtags(input_path):    \n",
-    "    return \"top_hashtags\"\n",
+    "def top_hashtags(input_path):\n",
+    "    \"\"\"Reads the dataset at input_path and returns the top 10 most used hashtags.\n",
+    "    \"\"\"\n",
+    "    hashtags_dict = defaultdict(lambda: 0)\n",
+    "    with open(input_path) as input_file:\n",
+    "        for line in input_file:\n",
+    "            tweet = json.loads(line.strip())\n",
+    "            hashtags = re.findall(r'#[a-zA-Z0-9]+\\b', tweet[\"content\"])\n",
+    "            for h in hashtags:\n",
+    "                hashtags_dict[h] += 1\n",
+    "    top_hashtags = sorted([(htag, count) for htag, count in hashtags_dict.items()], key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    return list(map(lambda x: x[0], top_hashtags[:10]))\n",
     "\n",
     "def main():\n",
     "    input_path = input(\"Enter dataset path (leave empty to use default value): \")\n",
@@ -151,9 +163,9 @@
       "        [2] Top 10 users that tweeted the most\n",
       "        [3] Top 10 days where people tweeted the most\n",
       "        [4] Top 10 most used hashtags\n",
-      "> 3\n",
+      "> 4\n",
       "Execution result:\n",
-      " ['2021-02-03', '2021-02-04', '2021-02-05', '2021-02-02', '2021-02-06', '2021-02-07', '2021-02-09', '2021-02-08', '2021-02-10', '2021-02-11']\n"
+      " ['#FarmersProtest', '#IStandWithFarmers', '#farmersprotest', '#IndianFarmersHumanRights', '#FarmersAreIndia', '#StandWithFarmers', '#Rihanna', '#FarmersProtests', '#Farmers', '#shameonbollywood']\n"
      ]
     }
    ],
