Refactor main output
Each one of the 10 results now appear in a new line,
for better readability.

Other changes:

Update README.md

--- a/twitter_functions.ipynb
+++ b/twitter_functions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9d8763f8",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "7446f13f",
    "metadata": {},
    "outputs": [],
@@ -49,6 +49,8 @@
     "DEFAULT_DATA_DIR = os.path.join(\"data\", \"farmers-protest-tweets-2021-03-5.json\")\n",
     "\n",
     "def validate_input(input_str):\n",
+    "    \"\"\"Validates that the input is one of the available options.\n",
+    "    \"\"\"\n",
     "    if input_str not in [\"1\", \"2\", \"3\", \"4\"]:\n",
     "        input_str = input(\"Please enter a valid option.\\n> \")\n",
     "        return validate_input(input_str)\n",
@@ -135,7 +137,9 @@
     "    \n",
     "    selected_function = validate_input(input(f\"{options_str}\\n> \"))\n",
     "    result = functions_dict[selected_function](input_path)\n",
-    "    print(f\"Execution result:\\n {result}\")"
+    "    print(f\"\\nExecution result:\")\n",
+    "    for idx, item in enumerate(result):\n",
+    "        print(f\"{idx+1}. {item}\")"
    ]
   },
   {
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "2c41796c",
    "metadata": {},
    "outputs": [
@@ -164,8 +168,18 @@
       "        [3] Top 10 days where people tweeted the most\n",
       "        [4] Top 10 most used hashtags\n",
       "> 4\n",
+      "\n",
       "Execution result:\n",
-      " ['#FarmersProtest', '#IStandWithFarmers', '#farmersprotest', '#IndianFarmersHumanRights', '#FarmersAreIndia', '#StandWithFarmers', '#Rihanna', '#FarmersProtests', '#Farmers', '#shameonbollywood']\n"
+      "1. #FarmersProtest\n",
+      "2. #IStandWithFarmers\n",
+      "3. #farmersprotest\n",
+      "4. #IndianFarmersHumanRights\n",
+      "5. #FarmersAreIndia\n",
+      "6. #StandWithFarmers\n",
+      "7. #Rihanna\n",
+      "8. #FarmersProtests\n",
+      "9. #Farmers\n",
+      "10. #shameonbollywood\n"
      ]
     }
    ],
